# EpileTrack

./: README.md  SignUp.qml  main.cpp  main.qml  qml.qrc
CMAKE_VERSION/: .gitignore  CMakeLists.txt  build_android.sh  build_desktop.sh
CMAKE_VERSION/build_android/: build.sh
CMAKE_VERSION/build_desktop/: build.sh
CMAKE_VERSION/data/: AndroidManifest.xml
CMAKE_VERSION/src/: CMakeLists.txt  main.cpp
CMAKE_VERSION/src/qml/: BigButton.qml  CMakeLists.txt  LoginPage.qml  WelcomePage.qml  main.qml  qml.qrc
EpileTrack/app/: build.gradle  proguard-rules.pro
EpileTrack/app/src/androidTest/java/com/example/cristi/epiletrack/: ApplicationTest.java
EpileTrack/app/src/main/: AndroidManifest.xml
EpileTrack/app/src/main/res/layout/: activity_add_seizure.xml  activity_dashboard.xml  activity_log_screen.xml  activity_login1.xml  activity_sign_up.xml  fragment_blank.xml  fragment_item_list.xml  fragment_plus_one.xml
EpileTrack/app/src/main/res/values/: colors.xml  strings.xml
EpileTrack/app/src/main/res/xml/: pref_headers.xml
QML/: SignUp.qml
interface/: BrainSalad.ai  Sign up.ai  Splash Screen - final.ai  add data.ai  add med.ai  add seizure v2.ai  add seizure.ai  dashboard complete.ai  dashboard.ai  date epile track.csv  edit 7 may.ai  editing mode.ai  loading page.ai  login.ai  monthly stats.ai  weekly stats.ai
interface/demo/: index.html
interface/demo/assets/: scripts.js
interface/demo/assets/apps/share/css/: share-offline.css
qmake test/: Welcome.qml
qmake test/kirigami/: qmldir
(+16 files in other folders)
